--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,8 +7,10 @@ kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.9.0"
 kotlinx-io = "0.8.0"
 ksp = "2.3.0"
-compose = "1.10.0-alpha03"
-adaptive = "1.2.0"
+compose = "1.10.0-beta01"
+compose-material3 = "1.10.0-alpha04"
+compose-material3-adaptive = "1.3.0-alpha01"
+compose-materialIconsExtended = "1.7.3"
 lifecycle = "2.9.5"
 navigation = "2.9.1"
 ktor = "3.3.1"
@@ -33,14 +35,23 @@ androidx-profileinstaller = { module = "androidx.profileinstaller:profileinstall
 android-material = { module = "com.google.android.material:material", version = "1.13.0" }
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version = "0.37.3" }
 
+jetbrains-compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "compose" }
+jetbrains-compose-foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "compose" }
+jetbrains-compose-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "compose" }
+jetbrains-compose-ui-preview = { module = "org.jetbrains.compose.ui:ui-tooling-preview", version.ref = "compose" }
+jetbrains-compose-ui-backhandler = { module = "org.jetbrains.compose.ui:ui-backhandler", version.ref = "compose" }
+jetbrains-compose-material3 = { module = "org.jetbrains.compose.material3:material3", version.ref = "compose-material3" }
+jetbrains-compose-material3-window-size = { module = "org.jetbrains.compose.material3:material3-window-size-class", version.ref = "compose-material3" }
+jetbrains-compose-material3-adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "compose-material3-adaptive" }
+jetbrains-compose-material3-adaptive-layout = { module = "org.jetbrains.compose.material3.adaptive:adaptive-layout", version.ref = "compose-material3-adaptive" }
+jetbrains-compose-material3-adaptive-navigation = { module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation", version.ref = "compose-material3-adaptive" }
+jetbrains-compose-materialIconsExtended = { module = "org.jetbrains.compose.material:material-icons-extended", version.ref = "compose-materialIconsExtended" }
+jetbrains-compose-desktop-common = { module = "org.jetbrains.compose.desktop:desktop", version.ref = "compose" }
+jetbrains-compose-components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "compose" }
+
 jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigation" }
 jetbrains-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "lifecycle" }
 jetbrains-lifecycle-runtime-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle" }
-jetbrains-compose-ui-backhandler = { module = "org.jetbrains.compose.ui:ui-backhandler", version.ref = "compose" }
-jetbrains-compose-window-size = { module = "org.jetbrains.compose.material3:material3-window-size-class", version.ref = "compose" }
-jetbrains-compose-adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "adaptive" }
-jetbrains-compose-adaptive-layout = { module = "org.jetbrains.compose.material3.adaptive:adaptive-layout", version.ref = "adaptive" }
-jetbrains-compose-adaptive-navigation = { module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation", version.ref = "adaptive" }
 
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
@@ -107,9 +118,9 @@ material-kolor = { module = "com.materialkolor:material-kolor", version = "5.0.0
 reorderable = { module = "sh.calvin.reorderable:reorderable", version = "3.0.0" }
 compottie = { module = "io.github.alexzhirkevich:compottie", version = "2.0.2" }
 
-skyd666-settings = { module = "io.github.skyd666:settings", version = "1.0-beta03" }
-skyd666-compone = { module = "io.github.skyd666:compone", version = "1.0-beta06" }
-skyd666-mvi = { module = "io.github.skyd666:mvi", version = "1.0-beta02" }
+skyd666-settings = { module = "io.github.skyd666:settings", version = "1.0-beta05" }
+skyd666-compone = { module = "io.github.skyd666:compone", version = "1.0-beta07" }
+skyd666-mvi = { module = "io.github.skyd666:mvi", version = "1.0-beta04" }
 
 junit = { module = "junit:junit", version = "4.13.2" }
 androidx-junit-ktx = { module = "androidx.test.ext:junit-ktx", version = "1.3.0" }
@@ -122,7 +133,7 @@ androidx-work-test = { module = "androidx.work:work-testing", version.ref = "wor
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 
-androidx-compose-runtime-tracing = { module = "androidx.compose.runtime:runtime-tracing", version = "1.10.0-alpha05" }
+androidx-compose-runtime-tracing = { module = "androidx.compose.runtime:runtime-tracing", version = "1.10.0-beta01" }
 androidx-tracing-perfetto = { module = "androidx.tracing:tracing-perfetto", version.ref = "tracing-perfetto" }
 androidx-tracing-perfetto-binary = { module = "androidx.tracing:tracing-perfetto-binary", version.ref = "tracing-perfetto" }
 
